@@ -9,11 +9,12 @@ HOST_OLD=$HOST
 [ "${HOST#cobalt}"      != $HOST ] && HOST=cobalt
 [ "${HOST#callist}"     != $HOST ] && HOST=callisto
 [ "${HOST#ceres2-}"     != $HOST ] && HOST=ceres2
-[ "${HOST#login}"       != $HOST ] && HOST=occigen
+[ "${HOST#login_}"      != $HOST ] && HOST=occigen
 [ "${HOST#mezel}"       != $HOST ] && HOST=mezel
 [ "${HOST#wn}"          != $HOST ] && HOST=csp-cssi
 [ "${HOST#frontal-csp}" != $HOST ] && HOST=csp-cssi
 [ "${HOST#cristal}"     != $HOST ] && HOST=cristal
+[ "${HOST#login}"       != $HOST ] && HOST=orcus
 # New variable HOST for several build on the same HOST:
 if [ "$WORKBASE" = "" ]
 then
