@@ -1,3 +1,4 @@
+XX/XX/19 (TRUST)  Portability : orcus DM2S cluster supported
 -------------------------------------------------------------------------------------------------------
 Release notes version 1.8.0_beta : Enhancements, modifications and corrected bugs since version 1.7.9 :
 -------------------------------------------------------------------------------------------------------
@@ -22,8 +23,8 @@ Release notes version 1.8.0_beta : Enhancements, modifications and corrected bug
 09/10/19 (TRUST)  Bug fixed   : During parallel calculaton, possible divide by 0 on definition_champs expression using fields with non-updated virtual spaces on cells
 07/10/19 (TRUST)  Bug fixed   : Write u+,d+,u*, ... values into *_Ustar.face when temps_cpu_max reached or when stop_file detected.
 30/09/19 (Tools)  Portability : Provided Gnuplot version updated to 5.2.7
-28/08/19 (TRUST)  Bug fixed   : Add a check for extracted field using surface domain with not the good support
-23/08/19 (TRUST)  Bug fixed   : Regression introduced in 1.7.7: using MED format post-processing during parallel calculation with empty zones crashed
+28/08/19 (TRUST)  Bug fixed   : Add a check for extracted field using surface domain with not thecluster good support
+23/08/19 (TRUST)  Bug fixed   : Regression introduced in 1.7.7: using MED format post-processingcluster during parallel calculation with empty zones crashed
 21/08/19 (TRUST)  New keyword : Champ_Fonc_MED_Tabule to interpolate each time step among a list of fields from a MED file
 20/08/19 (TRUST)  Portability : Fedora 30 and GNU compilers 9.0.1 supported
 -------------------------------------------------------------------------------------------------------
